# LI1

./: README.md
Project/: 2022li1g061.cabal  README.md
Project/doc/html/: Tarefa1_2022li1g061.html  Tarefa2_2022li1g061.html  Tarefa3_2022li1g061.html  Tarefa4_2022li1g061.html  doc-index.html  index.html
Project/src/Game/: Main.hs  Tarefa1_2022li1g061.hs  Tarefa2_2022li1g061.hs  Tarefa3_2022li1g061.hs  Tarefa4_2022li1g061.hs  Tarefa5_2022li1g061.hs
Project/tests/: Spec.hs  Tarefa1_2022li1g061_Spec.hs  Tarefa2_2022li1g061_Spec.hs  Tarefa3_2022li1g061_Spec.hs  Tarefa4_2022li1g061_Spec.hs
